none: minor fixes.